--- a/install.yml
+++ b/install.yml
@@ -1,9 +1,31 @@
 #install.yaml
 ---
-- name: Get hostname and IP address of Alpine hosts
+- name: Common installation for server.
   hosts: hostlab
   gather_facts: yes
   tasks:
-    - name: Display hostname and IP address
-      debug:
-        msg: "Hostname: {{ ansible_hostname }}, IP Address: {{ ansible_default_ipv4.address }}"
+    - name: Update SSH configuration
+      ansible.builtin.lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: "^PasswordAuthentication "
+        line: "PasswordAuthentication {{ ssh_password_authentication }}"
+      notify: Restart SSH service
+
+    - name: Add current user to sudoers file
+      ansible.builtin.blockinfile:
+        path: /etc/sudoers
+        block: "{{ sudoers_block }}"
+        marker: "# {mark} ANSIBLE MANAGED BLOCK"
+
+    - name: Configure locale settings
+      ansible.builtin.shell:
+        cmd: "{{ locale_gen_command }}"
+        creates: "/etc/locale.gen"
+      environment:
+        LC_ALL: "en_US.UTF-8"
+        LANG: "en_US.UTF-8"
+
+    - name: Install essential packages
+      apt:
+        name: "{{ apt_packages }}"
+        state: present
