--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -21,6 +21,7 @@
         src: "/tmp/backup_{{ ansible_date_time.iso8601_basic_short }}.zip"
         dest: "{{ local_download_path }}"
         flat: yes
+      timeout: 3600  # Set the timeout to 1 hour (in seconds)
 
     - name: Remove temporary archive on the remote server
       file:
