--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -16,12 +16,16 @@
         format: zip
       become: yes
 
-    - name: Fetch the archived backup from remote host
-      fetch:
-        src: "/tmp/backup_{{ ansible_date_time.iso8601_basic_short }}.zip"
-        dest: "{{ local_download_path }}"
-        flat: yes
-      timeout: 3600  # Set the timeout to 1 hour (in seconds)
+    - name: Run SCP command
+      ansible.builtin.command: scp -r -i ~/.ssh/id_rsa {{ ansible_user }}@{{  ansible_host  }}:/tmp/backup_{{ ansible_date_time.iso8601_basic_short }}.zip {{ local_download_path }}
+      become: no
+
+    # - name: Fetch the archived backup from remote host
+    #   fetch:
+    #     src: "/tmp/backup_{{ ansible_date_time.iso8601_basic_short }}.zip"
+    #     dest: "{{ local_download_path }}"
+    #     flat: yes
+    #   timeout: 3600  # Set the timeout to 1 hour (in seconds)
 
     - name: Remove temporary archive on the remote server
       file:
